# grp-project-recommender-systems

./: .env  .env.local  .gitignore  README.md  cb_notebook.ipynb  content-based.py  eda.ipynb  hybrid.py  hybrid_notebook.ipynb  pyproject.toml
config/: logging.yml
hybrid_recommender/: main.py
jolan/: eda.ipynb
models/: U_2025-02-19.npy  V_2025-02-19.npy
src/: __init__.py  __main__.py
src/data_normalization/: README.md  __init__.py  main.py
src/evaluation/: helper_functions.py  main.py
src/recommender_systems/: __init__.py  base_class_recommender_system.py
src/recommender_systems/baseline/: __init__.py  main.py
src/recommender_systems/collaborative_filtering/: __init__.py  als_matrix_fact.py  item_item.py  main.py
src/recommender_systems/feature_based/: __init__.py  content_similarity.py
src/recommender_systems/hybrid/: __init__.py  hybrid_item_item.py  true_hybrid.py
