[tool.poetry]
name = "recom_syst_grp_project"
version = "0.1.0"
description = ""
authors = ["Jolan <jolan11.dubois@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
pytest = "^8.3.4"
scipy = "^1.15.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
xgboost = "^3.0.0"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
